--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             <h3>Choose Sign-in Method</h3>
             <div>
                 <button class="btn1">
-                    <img src="/assets/email.png">
+                    <img src="./assets/email.png">
                     Sign in with Email
                 </button>
             </div>
                 
             <div class="btn2">
                 <button class="btn2">
-                    <img src="/assets/google.png">
+                    <img src="./assets/google.png">
                     Sign in with Google
                 </button>
             </div>
